<resources>
    <string name="app_name">Bengkelin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="analysis">Analisis</string>
    <string name="profile">Profil</string>
    <string name="detail">Detail</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="required">Required</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="hold_on">Tunggu dulu</string>
    <string name="email">Email</string>
    <string name="or">Atau</string>
    <string name="login_subtitle">Silahkan masuk untuk melanjutkan</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="register_subtitle">Silahkan isi data berikut</string>
    <string name="name">Nama</string>
    <string name="take_from_gallery">Ambil dari galeri</string>
    <string name="take_from_camera">Ambil dari kamera</string>
    <string name="upload">Upload</string>
    <string name="quality_analyze">Analisa kualitas</string>
    <string name="analysis_hint">Silahkan masukan gambar ban, lalu klik tombol analisa</string>
    <string name="permission_required">Izin diperlukan</string>
    <string name="permissions_success">Izin berhasil diberikan</string>
    <string name="select_image">Silahkan pilih gambar</string>
    <string name="search">Cari</string>
    <string name="distance_measure">%1$dm</string>
    <string name="distance">Jarak</string>
    <string name="number_of_queue">%1$d Antrian</string>
    <string name="nearest">Terdekat</string>
    <string name="starFourPlus">Bintang 4+</string>
    <string name="queue">Antrian</string>
    <string name="rating">Rating</string>
    <string name="empty">Kosong!</string>
    <string name="home_title">Pilih bengkel terbaikmu</string>
    <string name="ok">Oke</string>
    <string name="image_empty">Gambar ban tidak boleh kosong ya!</string>
    <string name="good">Bagus</string>
    <string name="bad">Buruk</string>
    <string name="schedule">Jadwal</string>
    <string name="hour">Jam buka</string>
    <string name="choose_services">Pilih jenis servis</string>
    <string name="choose_vehicle">Pilih jenis kendaraan</string>
    <string name="add_note">Tambah catatan</string>
    <string name="review">Review</string>
    <string name="note">Catatan</string>
    <string name="location_not_found">Lokasi tidak ditemukan!</string>
    <string name="gps_off_alert">Anda harus mengaktifkan GPS untuk menggunakan aplikasi ini!</string>
    <string name="service_confirm">Konfirmasi servis</string>
    <string name="vehicle_empty">Silahkan pilih jenis kendaraan ya!</string>
    <string name="services_empty">Silahkan pilih jenis servis ya!</string>
    <string name="payment_empty">Silahkan pilih metode pembayaran ya!</string>
    <string name="cash">Tunai</string>
    <string name="transfer">Transfer</string>
    <string name="total_payment">Total pembayaran</string>
    <string name="process">Proses</string>
    <string name="discount">Promo</string>
    <string name="subtotal_payment">Subtotal biaya</string>
    <string name="payment_summary">Ringkasan pembayaran</string>
    <string name="payment_method">Metode pembayaran</string>
    <string name="service_type">Jenis Servis</string>
    <string name="vehicle_type">Jenis kendaraan</string>
    <string name="booking_success">Booking sukses</string>
    <string name="logout">Keluar</string>
    <string name="created_at">Dibuat pada: %1$s</string>
</resources>