<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.analysis.AnalysisFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image_24"
            app:strokeColor="@color/dark_gray"
            app:strokeWidth="4dp" />

        <TextView
            android:id="@+id/tv_hint"
            style="?attr/textAppearanceBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/analysis_hint"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <Button
            android:id="@+id/btn_gallery"
            style="@style/Button.Bengkelin.Outlined.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/take_from_gallery"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint" />

        <Button
            android:id="@+id/btn_camera"
            style="@style/Button.Bengkelin.Outlined.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_from_camera"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/btn_analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quality_analyze"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>