<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirmation.ConfirmationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bengkelName"
                style="@style/TextAppearance.Bengkelin.h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Bengkel Pak Mahmud MD" />

            <TextView
                android:id="@+id/tv_bengkelAddress"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Jl. yang pernah kita lalui bersama dengan dia" />

            <TextView
                style="@style/TextAppearance.Bengkelin.h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/vehicle_type" />

            <TextView
                android:id="@+id/tv_vehicle"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/gray"
                android:padding="8dp"
                tools:text="Motor" />

            <TextView
                style="@style/TextAppearance.Bengkelin.h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/service_type" />

            <LinearLayout
                android:id="@+id/layout_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/layout_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Bengkelin.h6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />

                <TextView
                    android:id="@+id/tv_note"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="@color/gray"
                    android:orientation="vertical"
                    android:padding="8dp"
                    tools:text="asjahkashakjshakjshaks asakhgsakhgsakhs khagskagska khagskagsa akgsakhsgah" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="12dp"
            app:dividerColor="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/TextAppearance.Bengkelin.h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_method" />

            <RadioGroup
                android:id="@+id/rg_payment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_cash"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cash" />

                <RadioButton
                    android:id="@+id/rb_transfer"
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/transfer" />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="12dp"
            app:dividerColor="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/TextAppearance.Bengkelin.h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gray"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Diskon pengguna baru"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Diskon Rp3.000" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_arrow_right_24"
                        app:tint="?attr/colorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextAppearance.Bengkelin.h6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/payment_summary" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:contentPadding="16dp"
                app:strokeColor="@color/gray"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/subtotal_payment" />

                        <TextView
                            android:id="@+id/tv_subtotalPayment"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100.000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/discount" />

                        <TextView
                            android:id="@+id/tv_discount"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100.000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/total_payment"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_totalPaymentSummary"
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            tools:text="100.000" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="12dp"
            app:dividerColor="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_payment" />

                <TextView
                    android:id="@+id/tv_totalPayment"
                    style="@style/TextAppearance.Bengkelin.h6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Rp100.000" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/process"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>